--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lazy_async_promise"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 authors = ["Christopher Regali <christopher.regali@vdop.org>"]
 license = "MIT"
@@ -12,4 +12,7 @@ exclude = [".github"]
 description = "Primitives for lazily getting data from futures with tokio for immediate mode guis"
 
 [dependencies]
-tokio = {version="1", features=["rt-multi-thread", "sync", "time", "macros"]}
+tokio = {version="1", features=["rt-multi-thread", "sync"]}
+
+[dev-dependencies]
+tokio = {version="1", features=["rt-multi-thread", "sync", "time", "fs"]}
