--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,5 +1,3 @@
-name: Rust
-
 on:
   push:
     branches: [ "main" ]
@@ -11,12 +9,23 @@ env:
 
 jobs:
   build:
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+        - os: ubuntu-latest
+        - os: windows-latest
+        - os: macos-latest
 
-    runs-on: ubuntu-latest
-
+    name: rust-ci ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run check
+      run: cargo check --verbose
+    - name: Run clippy
+      run: cargo clippy --verbose
